tests/baselines/reference/convertKeywordsYes(strict=true).errors.txt
convertKeywordsYes.ts(6,5): error TS1212: Identifier expected. 'implements' is a reserved word in strict mode.
convertKeywordsYes.ts(7,5): error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.
convertKeywordsYes.ts(8,5): error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
convertKeywordsYes.ts(11,5): error TS1212: Identifier expected. 'package' is a reserved word in strict mode.
convertKeywordsYes.ts(12,5): error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
convertKeywordsYes.ts(13,5): error TS1212: Identifier expected. 'protected' is a reserved word in strict mode.
convertKeywordsYes.ts(14,5): error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
convertKeywordsYes.ts(16,5): error TS1212: Identifier expected. 'static' is a reserved word in strict mode.
convertKeywordsYes.ts(19,5): error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
convertKeywordsYes.ts(24,5): error TS1212: Identifier expected. 'implements' is a reserved word in strict mode.
convertKeywordsYes.ts(25,5): error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.
convertKeywordsYes.ts(26,5): error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
convertKeywordsYes.ts(28,5): error TS1212: Identifier expected. 'package' is a reserved word in strict mode.
convertKeywordsYes.ts(29,5): error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
convertKeywordsYes.ts(30,5): error TS1212: Identifier expected. 'protected' is a reserved word in strict mode.
convertKeywordsYes.ts(31,5): error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
convertKeywordsYes.ts(33,5): error TS1212: Identifier expected. 'static' is a reserved word in strict mode.
convertKeywordsYes.ts(35,5): error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
convertKeywordsYes.ts(40,8): error TS1212: Identifier expected. 'implements' is a reserved word in strict mode.
convertKeywordsYes.ts(41,9): error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.
convertKeywordsYes.ts(42,8): error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
convertKeywordsYes.ts(45,8): error TS1212: Identifier expected. 'package' is a reserved word in strict mode.
convertKeywordsYes.ts(46,9): error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
convertKeywordsYes.ts(47,9): error TS1212: Identifier expected. 'protected' is a reserved word in strict mode.
convertKeywordsYes.ts(48,9): error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
convertKeywordsYes.ts(50,9): error TS1212: Identifier expected. 'static' is a reserved word in strict mode.
convertKeywordsYes.ts(53,8): error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
convertKeywordsYes.ts(116,5): error TS7008: Member 'constructor' implicitly has an 'any' type.
convertKeywordsYes.ts(117,5): error TS7008: Member 'any' implicitly has an 'any' type.
convertKeywordsYes.ts(118,5): error TS7008: Member 'boolean' implicitly has an 'any' type.
convertKeywordsYes.ts(119,5): error TS7008: Member 'implements' implicitly has an 'any' type.
convertKeywordsYes.ts(120,5): error TS7008: Member 'interface' implicitly has an 'any' type.
convertKeywordsYes.ts(121,5): error TS7008: Member 'let' implicitly has an 'any' type.
convertKeywordsYes.ts(122,5): error TS7008: Member 'module' implicitly has an 'any' type.
convertKeywordsYes.ts(123,5): error TS7008: Member 'number' implicitly has an 'any' type.
convertKeywordsYes.ts(124,5): error TS7008: Member 'package' implicitly has an 'any' type.
convertKeywordsYes.ts(125,5): error TS7008: Member 'private' implicitly has an 'any' type.
convertKeywordsYes.ts(126,5): error TS7008: Member 'protected' implicitly has an 'any' type.
convertKeywordsYes.ts(127,5): error TS7008: Member 'public' implicitly has an 'any' type.
convertKeywordsYes.ts(128,5): error TS7008: Member 'set' implicitly has an 'any' type.
convertKeywordsYes.ts(129,5): error TS7008: Member 'static' implicitly has an 'any' type.
convertKeywordsYes.ts(130,5): error TS7008: Member 'string' implicitly has an 'any' type.
convertKeywordsYes.ts(131,5): error TS7008: Member 'get' implicitly has an 'any' type.
convertKeywordsYes.ts(132,5): error TS7008: Member 'yield' implicitly has an 'any' type.
convertKeywordsYes.ts(133,5): error TS7008: Member 'break' implicitly has an 'any' type.
convertKeywordsYes.ts(134,5): error TS7008: Member 'case' implicitly has an 'any' type.
convertKeywordsYes.ts(135,5): error TS7008: Member 'catch' implicitly has an 'any' type.
convertKeywordsYes.ts(136,5): error TS7008: Member 'class' implicitly has an 'any' type.
convertKeywordsYes.ts(137,5): error TS7008: Member 'continue' implicitly has an 'any' type.
convertKeywordsYes.ts(138,5): error TS7008: Member 'const' implicitly has an 'any' type.
convertKeywordsYes.ts(140,5): error TS7008: Member 'debugger' implicitly has an 'any' type.
convertKeywordsYes.ts(141,5): error TS7008: Member 'declare' implicitly has an 'any' type.
convertKeywordsYes.ts(142,5): error TS7008: Member 'default' implicitly has an 'any' type.
convertKeywordsYes.ts(143,5): error TS7008: Member 'delete' implicitly has an 'any' type.
convertKeywordsYes.ts(144,5): error TS7008: Member 'do' implicitly has an 'any' type.
convertKeywordsYes.ts(145,5): error TS7008: Member 'else' implicitly has an 'any' type.
convertKeywordsYes.ts(146,5): error TS7008: Member 'enum' implicitly has an 'any' type.
convertKeywordsYes.ts(147,5): error TS7008: Member 'export' implicitly has an 'any' type.
convertKeywordsYes.ts(148,5): error TS7008: Member 'extends' implicitly has an 'any' type.
convertKeywordsYes.ts(149,5): error TS7008: Member 'false' implicitly has an 'any' type.
convertKeywordsYes.ts(150,5): error TS7008: Member 'finally' implicitly has an 'any' type.
convertKeywordsYes.ts(151,5): error TS7008: Member 'for' implicitly has an 'any' type.
convertKeywordsYes.ts(152,5): error TS7008: Member 'function' implicitly has an 'any' type.
convertKeywordsYes.ts(153,5): error TS7008: Member 'if' implicitly has an 'any' type.
convertKeywordsYes.ts(155,5): error TS7008: Member 'import' implicitly has an 'any' type.
convertKeywordsYes.ts(156,5): error TS7008: Member 'in' implicitly has an 'any' type.
convertKeywordsYes.ts(157,5): error TS7008: Member 'instanceof' implicitly has an 'any' type.
convertKeywordsYes.ts(158,5): error TS7008: Member 'new' implicitly has an 'any' type.
convertKeywordsYes.ts(159,5): error TS7008: Member 'null' implicitly has an 'any' type.
convertKeywordsYes.ts(160,5): error TS7008: Member 'return' implicitly has an 'any' type.
convertKeywordsYes.ts(161,5): error TS7008: Member 'super' implicitly has an 'any' type.
convertKeywordsYes.ts(162,5): error TS7008: Member 'switch' implicitly has an 'any' type.
convertKeywordsYes.ts(163,5): error TS7008: Member 'this' implicitly has an 'any' type.
convertKeywordsYes.ts(164,5): error TS7008: Member 'throw' implicitly has an 'any' type.
convertKeywordsYes.ts(165,5): error TS7008: Member 'true' implicitly has an 'any' type.
convertKeywordsYes.ts(166,5): error TS7008: Member 'try' implicitly has an 'any' type.
convertKeywordsYes.ts(167,5): error TS7008: Member 'typeof' implicitly has an 'any' type.
convertKeywordsYes.ts(168,5): error TS7008: Member 'var' implicitly has an 'any' type.
convertKeywordsYes.ts(169,5): error TS7008: Member 'void' implicitly has an 'any' type.
convertKeywordsYes.ts(170,5): error TS7008: Member 'while' implicitly has an 'any' type.
convertKeywordsYes.ts(171,5): error TS7008: Member 'with' implicitly has an 'any' type.
convertKeywordsYes.ts(175,12): error TS18006: Classes may not have a field named 'constructor'.
convertKeywordsYes.ts(292,11): error TS1213: Identifier expected. 'implements' is a reserved word in strict mode. Class definitions are automatically in strict mode.
convertKeywordsYes.ts(293,11): error TS1213: Identifier expected. 'interface' is a reserved word in strict mode. Class definitions are automatically in strict mode.
convertKeywordsYes.ts(294,11): error TS1213: Identifier expected. 'let' is a reserved word in strict mode. Class definitions are automatically in strict mode.
convertKeywordsYes.ts(296,11): error TS1213: Identifier expected. 'package' is a reserved word in strict mode. Class definitions are automatically in strict mode.
convertKeywordsYes.ts(297,11): error TS1213: Identifier expected. 'private' is a reserved word in strict mode. Class definitions are automatically in strict mode.
convertKeywordsYes.ts(298,11): error TS1213: Identifier expected. 'protected' is a reserved word in strict mode. Class definitions are automatically in strict mode.
convertKeywordsYes.ts(299,11): error TS1213: Identifier expected. 'public' is a reserved word in strict mode. Class definitions are automatically in strict mode.
convertKeywordsYes.ts(301,11): error TS1213: Identifier expected. 'static' is a reserved word in strict mode. Class definitions are automatically in strict mode.
convertKeywordsYes.ts(303,11): error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.


==== convertKeywordsYes.ts (91 errors) ====
    // reserved ES5 future in strict mode
    
    var constructor = 0;
    var any = 0;
    var boolean = 0;
    var implements = 0;
        ~~~~~~~~~~
!!! error TS1212: Identifier expected. 'implements' is a reserved word in strict mode.
    var interface = 0;
        ~~~~~~~~~
!!! error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.
    var let = 0;
        ~~~
!!! error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
    var module = 0;
    var number = 0;
    var package = 0;
        ~~~~~~~
!!! error TS1212: Identifier expected. 'package' is a reserved word in strict mode.
    var private = 0;
        ~~~~~~~
!!! error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
    var protected = 0;
        ~~~~~~~~~
!!! error TS1212: Identifier expected. 'protected' is a reserved word in strict mode.
    var public = 0;
        ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
    var set = 0;
    var static = 0;
        ~~~~~~
!!! error TS1212: Identifier expected. 'static' is a reserved word in strict mode.
    var string = 0;
    var get = 0;
    var yield = 0;
        ~~~~~
!!! error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
    var declare = 0;
    
    function bigGeneric<
        constructor,
        implements ,
        ~~~~~~~~~~
!!! error TS1212: Identifier expected. 'implements' is a reserved word in strict mode.
        interface ,
        ~~~~~~~~~
!!! error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.
        let,
        ~~~
!!! error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
        module ,
        package,
        ~~~~~~~
!!! error TS1212: Identifier expected. 'package' is a reserved word in strict mode.
        private ,
        ~~~~~~~
!!! error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
        protected,
        ~~~~~~~~~
!!! error TS1212: Identifier expected. 'protected' is a reserved word in strict mode.
        public ,
        ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
        set ,
        static ,
        ~~~~~~
!!! error TS1212: Identifier expected. 'static' is a reserved word in strict mode.
        get ,
        yield,
        ~~~~~
!!! error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
        declare
        >(c: constructor,
        a: any,
        b2: boolean,
        i: implements ,
           ~~~~~~~~~~
!!! error TS1212: Identifier expected. 'implements' is a reserved word in strict mode.
        i2: interface ,
            ~~~~~~~~~
!!! error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.
        l: let,
           ~~~
!!! error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
        m: module ,
        n: number,
        p: package,
           ~~~~~~~
!!! error TS1212: Identifier expected. 'package' is a reserved word in strict mode.
        p2: private ,
            ~~~~~~~
!!! error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
        p3: protected,
            ~~~~~~~~~
!!! error TS1212: Identifier expected. 'protected' is a reserved word in strict mode.
        p4: public ,
            ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
        s: set ,
        s2: static ,
            ~~~~~~
!!! error TS1212: Identifier expected. 'static' is a reserved word in strict mode.
        s3: string,
        g: get ,
        y: yield,
           ~~~~~
!!! error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
        d: declare ) { }
    
    var bigObject = {
        constructor: 0,
        any: 0,
        boolean: 0,
        implements: 0,
        interface: 0,
        let: 0,
        module: 0,
        number: 0,
        package: 0,
        private: 0,
        protected: 0,
        public: 0,
        set: 0,
        static: 0,
        string: 0,
        get: 0,
        yield: 0,
        break: 0,
        case: 0,
        catch: 0,
        class: 0,
        continue: 0,
        const: 0,
    
        debugger: 0,
        declare: 0,
        default: 0,
        delete: 0,
        do: 0,
        else: 0,
        enum: 0,
        export: 0,
        extends: 0,
        false: 0,
        finally: 0,
        for: 0,
        function: 0,
        if: 0,
    
        import: 0,
        in: 0,
        instanceof: 0,
        new: 0,
        null: 0,
        return: 0,
        super: 0,
        switch: 0,
        this: 0,
        throw: 0,
        true: 0,
        try: 0,
        typeof: 0,
        var: 0,
        void: 0,
        while: 0,
        with: 0,
    };
    
    interface bigInterface {
        constructor;
        ~~~~~~~~~~~
!!! error TS7008: Member 'constructor' implicitly has an 'any' type.
        any;
        ~~~
!!! error TS7008: Member 'any' implicitly has an 'any' type.
        boolean;
        ~~~~~~~
!!! error TS7008: Member 'boolean' implicitly has an 'any' type.
        implements;
        ~~~~~~~~~~
!!! error TS7008: Member 'implements' implicitly has an 'any' type.
        interface;
        ~~~~~~~~~
!!! error TS7008: Member 'interface' implicitly has an 'any' type.
        let;
        ~~~
!!! error TS7008: Member 'let' implicitly has an 'any' type.
        module;
        ~~~~~~
!!! error TS7008: Member 'module' implicitly has an 'any' type.
        number;
        ~~~~~~
!!! error TS7008: Member 'number' implicitly has an 'any' type.
        package;
        ~~~~~~~
!!! error TS7008: Member 'package' implicitly has an 'any' type.
        private;
        ~~~~~~~
!!! error TS7008: Member 'private' implicitly has an 'any' type.
        protected;
        ~~~~~~~~~
!!! error TS7008: Member 'protected' implicitly has an 'any' type.
        public;
        ~~~~~~
!!! error TS7008: Member 'public' implicitly has an 'any' type.
        set;
        ~~~
!!! error TS7008: Member 'set' implicitly has an 'any' type.
        static;
        ~~~~~~
!!! error TS7008: Member 'static' implicitly has an 'any' type.
        string;
        ~~~~~~
!!! error TS7008: Member 'string' implicitly has an 'any' type.
        get;
        ~~~
!!! error TS7008: Member 'get' implicitly has an 'any' type.
        yield;
        ~~~~~
!!! error TS7008: Member 'yield' implicitly has an 'any' type.
        break;
        ~~~~~
!!! error TS7008: Member 'break' implicitly has an 'any' type.
        case;
        ~~~~
!!! error TS7008: Member 'case' implicitly has an 'any' type.
        catch;
        ~~~~~
!!! error TS7008: Member 'catch' implicitly has an 'any' type.
        class;
        ~~~~~
!!! error TS7008: Member 'class' implicitly has an 'any' type.
        continue;
        ~~~~~~~~
!!! error TS7008: Member 'continue' implicitly has an 'any' type.
        const;
        ~~~~~
!!! error TS7008: Member 'const' implicitly has an 'any' type.
    
        debugger;
        ~~~~~~~~
!!! error TS7008: Member 'debugger' implicitly has an 'any' type.
        declare;
        ~~~~~~~
!!! error TS7008: Member 'declare' implicitly has an 'any' type.
        default;
        ~~~~~~~
!!! error TS7008: Member 'default' implicitly has an 'any' type.
        delete;
        ~~~~~~
!!! error TS7008: Member 'delete' implicitly has an 'any' type.
        do;
        ~~
!!! error TS7008: Member 'do' implicitly has an 'any' type.
        else;
        ~~~~
!!! error TS7008: Member 'else' implicitly has an 'any' type.
        enum;
        ~~~~
!!! error TS7008: Member 'enum' implicitly has an 'any' type.
        export;
        ~~~~~~
!!! error TS7008: Member 'export' implicitly has an 'any' type.
        extends;
        ~~~~~~~
!!! error TS7008: Member 'extends' implicitly has an 'any' type.
        false;
        ~~~~~
!!! error TS7008: Member 'false' implicitly has an 'any' type.
        finally;
        ~~~~~~~
!!! error TS7008: Member 'finally' implicitly has an 'any' type.
        for;
        ~~~
!!! error TS7008: Member 'for' implicitly has an 'any' type.
        function;
        ~~~~~~~~
!!! error TS7008: Member 'function' implicitly has an 'any' type.
        if;
        ~~
!!! error TS7008: Member 'if' implicitly has an 'any' type.
    
        import;
        ~~~~~~
!!! error TS7008: Member 'import' implicitly has an 'any' type.
        in;
        ~~
!!! error TS7008: Member 'in' implicitly has an 'any' type.
        instanceof;
        ~~~~~~~~~~
!!! error TS7008: Member 'instanceof' implicitly has an 'any' type.
        new;
        ~~~
!!! error TS7008: Member 'new' implicitly has an 'any' type.
        null;
        ~~~~
!!! error TS7008: Member 'null' implicitly has an 'any' type.
        return;
        ~~~~~~
!!! error TS7008: Member 'return' implicitly has an 'any' type.
        super;
        ~~~~~
!!! error TS7008: Member 'super' implicitly has an 'any' type.
        switch;
        ~~~~~~
!!! error TS7008: Member 'switch' implicitly has an 'any' type.
        this;
        ~~~~
!!! error TS7008: Member 'this' implicitly has an 'any' type.
        throw;
        ~~~~~
!!! error TS7008: Member 'throw' implicitly has an 'any' type.
        true;
        ~~~~
!!! error TS7008: Member 'true' implicitly has an 'any' type.
        try;
        ~~~
!!! error TS7008: Member 'try' implicitly has an 'any' type.
        typeof;
        ~~~~~~
!!! error TS7008: Member 'typeof' implicitly has an 'any' type.
        var;
        ~~~
!!! error TS7008: Member 'var' implicitly has an 'any' type.
        void;
        ~~~~
!!! error TS7008: Member 'void' implicitly has an 'any' type.
        while;
        ~~~~~
!!! error TS7008: Member 'while' implicitly has an 'any' type.
        with;
        ~~~~
!!! error TS7008: Member 'with' implicitly has an 'any' type.
    }
    
    class bigClass {
        public "constructor" = 0;
               ~~~~~~~~~~~~~
!!! error TS18006: Classes may not have a field named 'constructor'.
        public any = 0;
        public boolean = 0;
        public implements = 0;
        public interface = 0;
        public let = 0;
        public module = 0;
        public number = 0;
        public package = 0;
        public private = 0;
        public protected = 0;
        public public = 0;
        public set = 0;
        public static = 0;
        public string = 0;
        public get = 0;
        public yield = 0;
        public break = 0;
        public case = 0;
        public catch = 0;
        public class = 0;
        public continue = 0;
        public const = 0;
        public debugger = 0;
        public declare = 0;
        public default = 0;
        public delete = 0;
        public do = 0;
        public else = 0;
        public enum = 0;
        public export = 0;
        public extends = 0;
        public false = 0;
        public finally = 0;
        public for = 0;
        public function = 0;
        public if = 0;
        public import = 0;
        public in = 0;
        public instanceof = 0;
        public new = 0;
        public null = 0;
        public return = 0;
        public super = 0;
        public switch = 0;
        public this = 0;
        public throw = 0;
        public true = 0;
        public try = 0;
        public typeof = 0;
        public var = 0;
        public void = 0;
        public while = 0;
        public with = 0;
    }
    
    enum bigEnum {
        constructor,
        any,
        boolean,
        implements,
        interface,
        let,
        module,
        number,
        package,
        private,
        protected,
        public,
        set,
        static,
        string,
        get,
        yield,
        break,
        case,
        catch,
        class,
        continue,
        const,
    
        debugger,
        declare,
        default,
        delete,
        do,
        else,
        enum,
        export,
        extends,
        false,
        finally,
        for,
        function,
        if,
    
        import,
        in,
        instanceof,
        new,
        null,
        return,
        super,
        switch,
        this,
        throw,
        true,
        try,
        typeof,
        var,
        void,
        while,
        with,
    }
    
    module bigModule {
        class constructor { }
        class implements { }
              ~~~~~~~~~~
!!! error TS1213: Identifier expected. 'implements' is a reserved word in strict mode. Class definitions are automatically in strict mode.
        class interface { }
              ~~~~~~~~~
!!! error TS1213: Identifier expected. 'interface' is a reserved word in strict mode. Class definitions are automatically in strict mode.
        class let { }
              ~~~
!!! error TS1213: Identifier expected. 'let' is a reserved word in strict mode. Class definitions are automatically in strict mode.
        class module { }
        class package { }
              ~~~~~~~
!!! error TS1213: Identifier expected. 'package' is a reserved word in strict mode. Class definitions are automatically in strict mode.
        class private { }
              ~~~~~~~
!!! error TS1213: Identifier expected. 'private' is a reserved word in strict mode. Class definitions are automatically in strict mode.
        class protected { }
              ~~~~~~~~~
!!! error TS1213: Identifier expected. 'protected' is a reserved word in strict mode. Class definitions are automatically in strict mode.
        class public { }
              ~~~~~~
!!! error TS1213: Identifier expected. 'public' is a reserved word in strict mode. Class definitions are automatically in strict mode.
        class set { }
        class static { }
              ~~~~~~
!!! error TS1213: Identifier expected. 'static' is a reserved word in strict mode. Class definitions are automatically in strict mode.
        class get { }
        class yield { }
              ~~~~~
!!! error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.
        class declare { }
    }